--- a/trunk/Client/RetailTrade/app.config
+++ b/trunk/Client/RetailTrade/app.config
@@ -5,6 +5,9 @@
             <section name="RetailTradeClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="RetailTrade.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="RetailTradeClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="RetailTrade.Properties.Settings.RetailTradeConnectionString"
@@ -17,7 +20,7 @@
             connectionString="Provider=VFPOLEDB.1;Data Source=D:\WORK\FarmTrade\Вента(Дн)_F98DF9B1_090232.dbf"
             providerName="System.Data.OleDb" />
         <add name="RetailTradeClient.Properties.Settings.RetailTradeConnectionString"
-            connectionString="Data Source=LEVADIA1\SQLEXPRESS;Initial Catalog=RetailTradeCl;Persist Security Info=True;User ID=sa;Password=123456;Connect Timeout=300"
+            connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=RetailTradeCl;User ID=sa;Password=123456;Connect Timeout=300"
             providerName="System.Data.SqlClient" />
         <add name="RetailTradeClient.Properties.Settings.db2ConnectionString"
             connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\db2.mdb"
@@ -44,7 +47,7 @@
                 <value>164</value>
             </setting>
             <setting name="SERVER" serializeAs="String">
-                <value>sansee1\sqlexpress</value>
+                <value>.\sqlexpress</value>
             </setting>
             <setting name="InentSp" serializeAs="String">
                 <value>183</value>
@@ -77,4 +80,11 @@
             </setting>
         </RetailTrade.Properties.Settings>
     </userSettings>
+    <applicationSettings>
+        <RetailTradeClient.Properties.Settings>
+            <setting name="PrinterId" serializeAs="String">
+                <value>Default</value>
+            </setting>
+        </RetailTradeClient.Properties.Settings>
+    </applicationSettings>
 </configuration>
