--- a/trunk/Client/RetailTrade/app.config
+++ b/trunk/Client/RetailTrade/app.config
@@ -20,13 +20,10 @@
             connectionString="Provider=VFPOLEDB.1;Data Source=D:\WORK\FarmTrade\Вента(Дн)_F98DF9B1_090232.dbf"
             providerName="System.Data.OleDb" />
         <add name="RetailTradeClient.Properties.Settings.RetailTradeConnectionString"
-            connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=RetailTradeCl;User ID=sa;Password=123456;Connect Timeout=300"
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=RetailTradeCl;Integrated Security=True;Connect Timeout=300"
             providerName="System.Data.SqlClient" />
         <add name="RetailTradeClient.Properties.Settings.db2ConnectionString"
             connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\db2.mdb"
-            providerName="System.Data.OleDb" />
-        <add name="RetailTradeClient.Properties.Settings.ConnectionString"
-            connectionString="Provider=VFPOLEDB.1;Data Source=D:\WORK\FarmTrade\Вента(Дн)_F98DF9B1_090232.dbf"
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <userSettings>
